--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA Compatible" content="ie=edge">
 	<title>ISS Tracker</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="aboutstyle.css">
 </head>
 
 <body>
@@ -28,9 +28,30 @@
       	</ul>
       </nav>
 
-      <div><h1>This website uses the Open Notify and Google Maps APIs to display the current location of the ISS. Click <a href="http://open-notify.org/" target="_blank">here</a> to learn more about the Open Notify API, <a href="https://developers.google.com/maps/documentation" target="_blank">here</a> to learn about Google Maps API, or <a href="https://www.nasa.gov/mission_pages/station/main/index.html" target="_blank">here</a> to learn about the ISS.</h1></div>
+      <div><h1>This website uses the "Where the ISS at" REST API and Leaflet.js to display the current location of the ISS. Scroll down for more information!</h1></div>
     </div>
-  </header>
+</header>
+
+<section class="section section-a">
+    <div class="container">
+      <h2>"Where the ISS at" REST API</h2>
+      <p>Click <a href="https://wheretheiss.at/w/developer" target="_blank">here</a> to learn more about the "Where the ISS at" REST API.
+    </div>
+</section>
+
+<section class="section section-b">
+    <div class="container">
+      <h2>Leaflet.js</h2>
+      <p>Click <a href="https://leafletjs.com/" target="_blank">here</a> to learn more about Leaflet.js.</p>
+    </div>
+</section>
+
+<section class="section section-c">
+    <div class="container">
+      <h2>The International Space Station</h2>
+      <p>Click <a href="https://www.nasa.gov/mission_pages/station/main/index.html" target="_blank">here</a> to learn more about the ISS.</p>
+    </div>
+</section>
 
 </body>
 
